index on ramapd: d7b4baa Updates

--- a/clashofplanets/game/templates/gamerooms.html
+++ b/clashofplanets/game/templates/gamerooms.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block main_content %}
 
-    <div class="block v" id="join">
+    <div class="block" id="join">
         <a href="{% url "join" %}">
             <button class="btn btn-info">Unirme a partida</button>
         </a>
