--- a/clashofplanets/game/templates/gamerooms.html
+++ b/clashofplanets/game/templates/gamerooms.html
@@ -1,10 +1,34 @@
 {% extends "base.html" %}
 {% block main_content %}
-
-    <div class="block" id="join">
-        <a href="{% url "join" %}">
-            <button class="btn btn-info">Unirme a partida</button>
-        </a>
-    </div>
-
+    <form action="" method="post">
+        {% csrf_token %}
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Choice</th>
+                    <th>Game ID</th>
+                    <th>Currently in</th>
+                    <th>Max Players</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for par in form.partidas %}
+                    <tr>
+                        <td><input type="radio" name="game_id" id="game_{{ par.id }}" value="{{ par.id }}"></td>
+                        <td>{{ par.id }}</td>
+                        <td>{{ par.currents }}</td>
+                        <td>{{ par.max_players }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {{ form.non_field_errors }}
+        <div class="fieldWrapper">
+            {{ form.planet_name.errors }}
+            {{ form.planet_name.label_tag }}
+            {{ form.planet_name }}
+        </div>
+        <br>
+        <input type="submit" class="btn-success" value="Join" />
+    </form>
 {% endblock %}
