--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -8,12 +8,11 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="shortcut icon" href="{% static "/img/favicon.ico" %}" />
-        <link rel="stylesheet" href="{% static "css/game.css" %}">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link href="{% static "css/game.css" %}" rel="stylesheet">
+        <link href="{% static "css/game.css" %}" rel="stylesheet" type="text/css"/>
         <link href="{% static "css/ingame.css" %}" rel="stylesheet" type="text/css"/>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="{% static "js/jquery-3.2.1.js" %}" ></script>
         <title>{% block title %}Clash Of The Planets{% endblock %}</title>
         {% block additional_head %}
         {% endblock %}
