--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -54,7 +54,7 @@
                     <p>Planet name</p>
                     <input id="planet_nameC" type="text" name="player_field">
                     <p>Max Players</p>
-                    <input id="max_playersC" type="text" name="player_field">
+                    <input id="max_playersC" type="text" name="max_players_field">
                     <br>
                     <input class="button-primary btn btn-space" type="submit" value="create game" id="red">
                 </form>
