--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="{% static "css/game.css" %}" rel="stylesheet" type="text/css"/>
         <link href="{% static "css/ingame.css" %}" rel="stylesheet" type="text/css"/>
-        <script src="{% static "js/jquery-3.2.1.js" %}" ></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <title>{% block title %}Clash Of The Planets{% endblock %}</title>
         {% block additional_head %}
         {% endblock %}
