New methods used for join

--- a/clashofplanets/game/templates/gamerooms.html
+++ b/clashofplanets/game/templates/gamerooms.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 {% block main_content %}
 
-    <div class="block" id="join">
-        <a href="{% url "join" %}">
-            <button class="btn btn-info">Unirme a partida</button>
-        </a>
-    </div>
+    {% include "joinform.html" %}
 
 {% endblock %}
