--- a/clashofplanets/game/templates/joinform.html
+++ b/clashofplanets/game/templates/joinform.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
 {% block main_content %}
-    <form action="{% url "join" %}" method="post">
+    <form action="{% url "game_rooms" %}" method="post">
         {% csrf_token %}
         <table class="table table-hover">
             <thead>
@@ -12,12 +11,12 @@
                 </tr>
             </thead>
             <tbody>
-                {% for par in form.partidas %}
+                {% for game in form.games %}
                     <tr>
-                        <td><input type="radio" name="game_id" id="game_{{ par.id }}" value="{{ par.id }}"></td>
-                        <td>{{ par.id }}</td>
-                        <td>{{ par.currents }}</td>
-                        <td>{{ par.max_players }}</td>
+                        <td><input type="radio" name="game_id" id="game_{{ game.id }}" value="{{ game.id }}"></td>
+                        <td>{{ game.id }}</td>
+                        <td>{{ game.currents }}</td>
+                        <td>{{ game.max_players }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
