Agrego atributo currentPlaying a Game

--- a/clashofplanets/game/templates/joinform.html
+++ b/clashofplanets/game/templates/joinform.html
@@ -15,7 +15,7 @@
                     <tr>
                         <td><input type="radio" name="game_id" id="game_{{ game.id }}" value="{{ game.id }}"></td>
                         <td>{{ game.id }}</td>
-                        <td>{{ game.currents }}</td>
+                        <td>{{ game.currentPlaying }}</td>
                         <td>{{ game.max_players }}</td>
                     </tr>
                 {% endfor %}
