Started making ingame stuff

--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -4,6 +4,8 @@
 
 {% block main_content %}
 
+{% csrf_token %}
+
 <form action = "{% url 'game_rooms' %}" method="post">
 {% csrf_token %}
 <input type="submit" value="back to lobby">
