--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -4,10 +4,13 @@
 
 {% block main_content %}
 
+<script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
+
 <div class="container">
     <div class="row text-center">
         <div class="col">
             <h1>Welcome to {{game.room_name}}
+                <p id="gamenum">{{game.id}}</p>
                 {% if request.user.is_authenticated %}
                     <span class="text-primary" > {{request.user.username}}</span>!
                 {% endif %}
@@ -24,7 +27,7 @@
                         <th class="text-center">Planet Seed</th>
                     </tr>
                 </thead>
-                <tbody class="text-center">
+                <tbody id="playerList" class="text-center">
                     {% for planet in planets %}
                         <tr>
                             <td>{{planet.id}}</td>
@@ -40,7 +43,7 @@
         <div class="col">
             {% if request.user == game.creator %}
             <!-- solo el creador de la sala puede comenzar el juego-->
-            <form action="" method="post">
+            <form action="{% url 'start_game' game.id %}" method="post">
                 {% csrf_token %}
                 <input type="submit" value="start game">
             </form>
