--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -4,7 +4,6 @@
 
 {% block main_content %}
 
-<script src="{% static "/js/main.js" %}?v=00001" type="text/javascript"/></script>
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 text-center">
@@ -79,5 +78,6 @@
         </div>
     </div>
 </div>
+<script src="{% static "/js/main.js" %}" type="text/javascript"/></script>
 
 {% endblock %}
