--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -5,45 +5,38 @@
 {% block main_content %}
 
 <script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
-
 <div class="container">
     <div class="row text-center">
         <div class="col">
-            <h1>Welcome to {{game.room_name}}
-                <p id="gamenum">{{game.id}}</p>
+            <h1>Welcome to {{game.room_name}}<br>
+                <p id="gamenum">{{game.id}}</p><br>
                 {% if request.user.is_authenticated %}
-                    <span class="text-primary" > {{request.user.username}}</span>!
+                    <span class="text-primary" >{{request.user.username}}</span>!
                 {% endif %}
             </h1>
         </div>
     </div>
-    <div class="row text-center">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th class="text-center">Planet ID</th>
-                        <th class="text-center">Planet Name</th>
-                        <th class="text-center">Planet Owner</th>
-                        <th class="text-center">Planet Seed</th>
-                    </tr>
-                </thead>
-                <tbody id="playerList" class="text-center">
-                    {% for planet in planets %}
+    <div class="container">
+        <div class="row text-center">
+                <table class="table table-hover">
+                    <thead>
                         <tr>
-                            <td>{{planet.id}}</td>
-                            <td>{{planet.name}}</td>
-                            <td>{{planet.player}}</td>
-                            <td>{{planet.seed}}</td>
+                            <th class="text-center">Planet ID</th>
+                            <th class="text-center">Planet Name</th>
+                            <th class="text-center">Planet Owner</th>
+                            <th class="text-center">Planet Seed</th>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody id="playerList" class="text-center">
+                    </tbody>
+                </table>
+        </div>
     </div>
     <div class="row text-center">
         <div class="col">
             {% if request.user == game.creator %}
             <!-- solo el creador de la sala puede comenzar el juego-->
-            <form action="{% url 'start_game' game.id %}" method="post">
+            <form action="" method="post">
                 {% csrf_token %}
                 <input type="submit" value="start game">
             </form>
@@ -57,5 +50,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
