--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -4,12 +4,11 @@
 
 {% block main_content %}
 
-<script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
+<script src="{% static 'js/inroom.js' %}?v=00003" type="text/javascript"/></script>
 <div class="container">
     <div class="row text-center">
         <div class="col">
-            <h1>Welcome to {{game.room_name}}
-            <br>
+            <h1>Game Room: {{game.room_name}}
             <p id="gamenum">{{game.id}}</p>
             {% if request.user.is_authenticated %}
                 <span class="text-primary" >{{request.user.username}}</span>!
@@ -37,7 +36,7 @@
         <div class="col">
             {% if request.user == game.creator %}
             <!-- solo el creador de la sala puede comenzar el juego-->
-            <form action="" method="post">
+            <form action="{% url 'start_game' game.id %}" method="post">
                 {% csrf_token %}
                 <input type="submit" value="start game">
             </form>
