--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -4,10 +4,45 @@
 
 {% block main_content %}
 
-{% csrf_token %}
+<script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
 
-<form action = "{% url 'game_rooms' %}" method="post">
-{% csrf_token %}
-<input type="submit" value="back to lobby">
+<div class="container">
+    <div class="row text-center">
+        <div class="col">
+            <h1>Game Room: {{game.room_name}}
+            <p id="gamenum">{{game}}</p>
+            {% if request.user.is_authenticated %}
+                <span class="text-primary" >{{request.user.username}}</span>!
+            {% endif %}
+            </h1>
+        </div>
+    </div>
+    <div class="row text-center">
+        <div class="col">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th class="text-center">Planet ID</th>
+                        <th class="text-center">Planet Name</th>
+                        <th class="text-center">Planet Owner</th>
+                        <th class="text-center">Planet Seed</th>
+                        <th class="text-center">Planet Pop</th>
+                        <th class="text-center">Planet Shield</th>
+                    </tr>
+                </thead>
+                <tbody id="playerList" class="text-center">
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row text-center">
+        <div class="col">
+            <form action = "{% url 'game_rooms' %}" method="post">
+            {% csrf_token %}
+            <input type="submit" value="back to lobby">
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
