--- a/clashofplanets/game/templates/home.html
+++ b/clashofplanets/game/templates/home.html
@@ -3,15 +3,14 @@
 {% load static %}
 
 {% block main_content %}
-<div class="row">
-    <div class="col-lg-12 col-md-12 text-center">
+<div class="row text-center">
+    <div class="col-md-12">
         <h1>Welcome to Clash Of The Planets
             {% if request.user.is_authenticated %}
             <span class="text-primary" > {{request.user.username}}</span>!
             {% endif %}
         </h1>
-        <br>
-        <img src="{% static "img/home_image.gif" %}" class="img-responsive center-block" />
+        <img src="{% static "img/home_image.gif" %}" class="img-fluid center-block" />
     </div>
 </div>
 {% endblock %}
