--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -11,14 +11,13 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="{% static "css/game.css" %}" rel="stylesheet" type="text/css"/>
-        <link href="{% static "css/ingame.css" %}" rel="stylesheet" type="text/css"/>
         <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
         <title>{% block title %}Clash Of The Planets{% endblock %}</title>
         {% block additional_head %}
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-faded fixed-top">
             <a class="navbar-brand" href="/">Clash Of The Planets</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsCollapse" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
