--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -13,7 +13,7 @@
 </div>
 <br>
 <div class="container">
-    <div class="row games" id="games">
+    <div class="row mx-auto" id="games">
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -27,54 +27,60 @@
             </tbody>
         </table>
     </div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <div class="cardb">
-            <h2>Join Game</h2>
-            <hr>
-            <form method="post" onsubmit="myButton.disabled=true; return true;">
-                {% csrf_token %}
-                {% for field in join_form %}
-                <p>
-                    {{ field.label_tag }}
-                    <br>
-                    {{ field }}
-                    {% if field.help_text %}
-                        <small style="color: grey">{{ field.help_text }}</small>
-                    {% endif %}
-                    {% for error in field.errors %}
-                        <p style="color: red">{{ error }}</p>
-                    {% endfor %}
-                </p>
-                {% endfor %}
-                <br>
-            <input class="button-primary btn btn-space" type="submit" value="join game" id="join">
-            </form>
-            <p id="JoinError" style="color: #ef3245"></p>
+
+    <div class="row text-center">
+        <div class="col-md-12 col-lg-12" id="rooms_list">
         </div>
     </div>
-    <div class="col-6">
-        <div class="cardr">
-            <h2>Create Game</h2>
-            <hr>
-            <form method="post" onsubmit="myButton.disabled=true; return true;">
-                {% csrf_token %}
-                {% for field in game_form %}
-                <p>
-                    {{ field.label_tag }}
-                    <br>
-                    {{ field }}
-                    {% if field.help_text %}
-                        <small style="color: grey">{{ field.help_text }}</small>
-                    {% endif %}
-                    {% for error in field.errors %}
-                        <p style="color: red">{{ error }}</p>
+
+    <div class="row">
+        <div class="col-6">
+            <div class="cardb">
+                <h2>Join Game</h2>
+                <hr class="style1">
+                <form method="post" onsubmit="myButton.disabled=true; return true;">
+                    {% csrf_token %}
+                    {% for field in join_form %}
+                    <p>
+                        {{ field.label_tag }}
+                        {{ field }}
+                        {% if field.help_text %}
+                            <p style="color: white">{{ field.help_text }}</p>
+                        {% endif %}
+                        {% for error in field.errors %}
+                            <p style="color: red">{{ error }}</p>
+                        {% endfor %}
+                    </p>
+                    <hr class="style1">
                     {% endfor %}
-                </p>
-                {% endfor %}
-                <input class="button-primary btn btn-space" type="submit" value="create game" id="red">
-            </form>
+                    <br>
+                <input class="button-primary btn btn-space" type="submit" value="join game" id="join">
+                </form>
+                <p id="JoinError" style="color: #ef3245"></p>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="cardr">
+                <h2>Create Game</h2>
+                <hr class="style1">
+                <form method="post" onsubmit="myButton.disabled=true; return true;">
+                    {% csrf_token %}
+                    {% for field in game_form %}
+                    <p>
+                        {{ field.label_tag }}
+                        {{ field }}
+                        {% if field.help_text %}
+                            <p style="color: white">{{ field.help_text }}</p>
+                        {% endif %}
+                        {% for error in field.errors %}
+                            <p style="color: red">{{ error }}</p>
+                        {% endfor %}
+                    </p>
+                    <hr class="style1">
+                    {% endfor %}
+                    <input class="button-primary btn btn-space" type="submit" value="create game" id="red">
+                </form>
+            </div>
         </div>
     </div>
 </div>
