minor changes on css, local jquery library files

--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -78,7 +78,7 @@
                     </p>
                     <hr class="style1">
                     {% endfor %}
-                    <input class="button-primary btn btn-space" type="submit" value="create game" id="red">
+                    <input class="button-primary btn btn-space" type="submit" value="create game" id="create">
                 </form>
             </div>
         </div>
