--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -311,5 +311,29 @@ label > .label-body {
   }
 }
 
-/* RANGE SLIDER
+/* CUSTOM MENU
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/***** Top menu *****/
+
+.navbar {
+	margin-bottom: 0;
+	background: #212529;
+	border: 0;
+	-moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0;
+	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
+}
+
+ul.navbar-nav {
+	font-family: 'Josefin Sans', sans-serif;
+	font-size: 14px;
+	color: #fff;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.navbar-inverse ul.navbar-nav li a { padding-top: 20px; padding-bottom: 20px; color: #fff; border: 0; }
+.navbar-inverse ul.navbar-nav li a:hover { color: #ddd; border: 0; }
+.navbar-inverse ul.navbar-nav li a:focus { color: #ddd; outline: 0; border: 0; }
+
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand { margin-left: 0; }
