--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -3,21 +3,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <!-- META -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
+
+        <!-- CSS -->
         <link rel="shortcut icon" href="{% static "/img/favicon.ico" %}" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Roboto:300,400,500">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="{% static "css/game.css" %}" rel="stylesheet" type="text/css"/>
-        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+
+        <!-- Javascript -->
+        <script src="{% static "js/jquery-3.2.1.js" %}"></script>
+
         <title>{% block title %}Clash Of The Planets{% endblock %}</title>
+
         {% block additional_head %}
         {% endblock %}
+
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-faded fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <a class="navbar-brand" href="/">Clash Of The Planets</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsCollapse" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,13 +45,6 @@
             </div>
         </nav>
         <div class="container" style="margin-bottom:50px;">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}" role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
             {% block main_content %}
             {% endblock %}
         </div>
