--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -13,19 +13,21 @@
 </div>
 <br>
 <div class="container">
-    <div class="row mx-auto" id="games">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th class="text-center">Game ID</th>
-                    <th class="text-center">Game Room Name</th>
-                    <th class="text-center">Players Connected</th>
-                    <th class="text-center">Max Players Allowed</th>
-                </tr>
-            </thead>
-            <tbody id="openGames" class="openGamesC text-center">
-            </tbody>
-        </table>
+    <div class="row" id="games">
+        <div class="col table-responsive text-center">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th class="text-center">Game ID</th>
+                        <th class="text-center">Game Room Name</th>
+                        <th class="text-center">Players Connected</th>
+                        <th class="text-center">Max Players Allowed</th>
+                    </tr>
+                </thead>
+                <tbody id="openGames" class="openGamesC text-center">
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="row text-center">
@@ -34,7 +36,7 @@
     </div>
 
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-12 text-center">
             <div class="cardb">
                 <h2>Join Game</h2>
                 <hr class="style1">
@@ -51,15 +53,13 @@
                             <p style="color: red">{{ error }}</p>
                         {% endfor %}
                     </p>
-                    <hr class="style1">
                     {% endfor %}
-                    <br>
-                <input class="button-primary btn btn-space" type="submit" value="join game" id="join">
+                    <input class="button-primary btn btn-space" type="submit" value="join game" id="join">
                 </form>
                 <p id="JoinError" style="color: #ef3245"></p>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-12 text-center">
             <div class="cardr">
                 <h2>Create Game</h2>
                 <hr class="style1">
@@ -69,14 +69,18 @@
                     <p>
                         {{ field.label_tag }}
                         {{ field }}
+                        {% if field == game_form.max_players %}
+                            <span class="highlight"></span><output id="rangevalue">3</output>
+                        {% endif %}
                         {% if field.help_text %}
-                            <p style="color: white">{{ field.help_text }}</p>
+                            <div>
+                                <small style="color: white">{{ field.help_text }}</small>
+                            </div>
                         {% endif %}
                         {% for error in field.errors %}
                             <p style="color: red">{{ error }}</p>
                         {% endfor %}
                     </p>
-                    <hr class="style1">
                     {% endfor %}
                     <input class="button-primary btn btn-space" type="submit" value="create game" id="create">
                 </form>
