--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -23,6 +23,11 @@ hr.style1{
   font-family: 'Roboto', sans-serif;
 }
 
+.bg-inverse {
+    background-color: #212529!important;
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
 	padding: 100px 0px 100px 0px;
     font-family: 'Roboto', sans-serif; /* 1 */
@@ -40,14 +45,26 @@ ul.openGamesC{
   text-shadow: 0.1em 0.1em 0.2em black;
 }
 
-#red{
+#create{
   color: #FFF;
   background-color: #4f9cf2;
   border-color: #4f9cf2;
+  margin-bottom: 10px;
 }
-#red:hover{
+#create:hover{
   background-color: rgb(72, 97, 239);
   border-color: rgb(72, 97, 239);
+}
+
+#join{
+  color: #FFF;
+  background-color:#3dba75;
+  border-color: #3dba75;
+  margin-bottom: 10px;
+}
+#join:hover{
+  background-color: rgb(48, 160, 106);
+  border-color: rgb(48, 160, 106);
 }
 
 .cardb h1{
@@ -59,15 +76,10 @@ ul.openGamesC{
 
 .cardb {
     text-align: center;
-    box-shadow: 0 2em 4em 0 #3aa84f;
+    box-shadow: 0 2em 4em 0 #37ad6c;
     transition: 0.5s;
-    background: rgba(32, 86, 60, 0.85);
+    background: rgba(57, 150, 99, 0.85);
     padding: 0.6em;
-    animation: pulseb 2s infinite;
-}
-
-.cardb:hover {
-    animation: none;
 }
 
 .cardr h1{
@@ -75,23 +87,17 @@ ul.openGamesC{
 }
 .cardr {
     text-align: center;
-    box-shadow: 0 2em 4em 0 #659af7;
+    box-shadow: 0 2em 4em 0 #2d5a91;
     transition: 0.5s;
-    background: rgba(36, 108, 153, 0.85);
+    background: rgba(43, 58, 173, 0.85);
     padding: 0.6em;
-    animation: pulsea 2s infinite;
 }
-
-.cardr:hover {
-    animation: none;
-}
-
 
 table {
     background-color: #050F1A;;
     color: white;
     border-collapse: collapse;
-    width:auto;
+    width:100%;
 }
 
 table th {
@@ -121,6 +127,7 @@ table tr:nth-child(even) {
     line-height: 60px;
     background-color: #212529;
 	font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 /* Links
@@ -138,58 +145,18 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  display: inline-block;
-  height: 38px;
-  padding: 0 30px;
-  color: #555;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 600;
-  line-height: 38px;
-  letter-spacing: .1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: white;
-  border-radius: 4px;
-  border: 1px solid #bbb;
-  cursor: pointer;
-  box-sizing: border-box; }
-.button:hover,
-button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-.button:focus,
-button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
-  outline: 0; }
-
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: #FFF;
-  background-color: #35c450;
-  border-color: #35c450; }
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover,
-input[type="button"].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:focus {
-  color: #FFF;
-  background-color: #1d8731;
-  border-color: #1d8731; }
+    height: 38px;
+    color: #555;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+    text-transform: uppercase;
+    white-space: nowrap;
+    background-color: white;
+    border-radius: 1px;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box; }
 
 
 /* Forms
@@ -203,13 +170,12 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-  height: 30px;
-  margin-bottom: 5px;
-  background-color: #fff;
-  border: 1px solid #D1D1D1;
-  border-radius: 3px;
-  box-shadow: none;
-  box-sizing: border-box; }
+    height: 30px;
+    background-color: #fff;
+    border: 1px solid #D1D1D1;
+    border-radius: 1px;
+    box-shadow: none;
+    box-sizing: border-box; }
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
@@ -223,9 +189,9 @@ textarea {
      -moz-appearance: none;
           appearance: none; }
 textarea {
-  min-height: 65px;
-  padding-top: 2px;
-  padding-bottom: 4px; }
+    min-height: 65px;
+    padding-top: 2px;
+    padding-bottom: 4px; }
 input[type="email"]:focus,
 input[type="number"]:focus,
 input[type="search"]:focus,
@@ -233,107 +199,21 @@ input[type="text"]:focus,
 input[type="tel"]:focus,
 input[type="url"]:focus,
 input[type="password"]:focus,
-textarea:focus,
-select:focus {
-  border: 1px solid #33C3F0;
-  outline: 0; }
-label,
-legend {
-  display: block;
-  margin-bottom: .5rem;
-  font-weight: 600; }
+textarea:focus,select:focus {
+    border: 1px solid #33C3F0;
+    outline: 0; }
+label,legend {
+    display: block;
+    margin-bottom: .5rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    }
 fieldset {
-  padding: 0;
-  border-width: 0; }
-input[type="checkbox"],
-input[type="radio"] {
-  display: inline; }
+    padding: 0;
+    border-width: 0; }
+input[type="checkbox"],input[type="radio"] {
+    display: inline; }
 label > .label-body {
-  display: inline-block;
-  margin-left: .5rem;
-  font-weight: normal; }
-
-  /* Pulse 1 Animation
-  –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-  @-webkit-keyframes pulse {
-   0% {
-     -webkit-box-shadow: 0 0 0 0 rgba(96, 145, 230, 0.3);
-   }
-   70% {
-       -webkit-box-shadow: 0 0 0 10px rgba(96, 145, 230, 0.3);
-   }
-   100% {
-       -webkit-box-shadow: 0 0 0 0 rgba(96, 145, 230, 0.3);
-   }
- }
- @keyframes pulsea {
-   0% {
-     -moz-box-shadow: 0 0 0 0 rgba(96, 145, 230, 0.3);
-     box-shadow: 0 0 0 0 rgba(96, 145, 230, 0.3);
-   }
-   70% {
-       -moz-box-shadow: 0 0 0 10px rgba(96, 145, 230, 0.3);
-       box-shadow: 0 0 0 10px rgba(96, 145, 230, 0.3);
-   }
-   100% {
-       -moz-box-shadow: 0 0 0 0 rgba(96, 145, 230, 0.3);
-       box-shadow: 0 0 0 0 rgba(96, 145, 230, 0.3);
-   }
- }
-
- /* Pulse 2 Animation
- –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
- @-webkit-keyframes pulseb {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(32, 86, 60, 0.3);
-  }
-  70% {
-      -webkit-box-shadow: 0 0 0 10px rgba(32, 86, 60, 0.3);
-  }
-  100% {
-      -webkit-box-shadow: 0 0 0 0 rgba(32, 86, 60, 0.3);
-  }
-}
-@keyframes pulse {
-  0% {
-    -moz-box-shadow: 0 0 0 0 rgba(32, 86, 60, 0.3);
-    box-shadow: 0 0 0 0 rgba(32, 86, 60, 0.3);
-  }
-  70% {
-      -moz-box-shadow: 0 0 0 10px rgba(32, 86, 60, 0.3);
-      box-shadow: 0 0 0 10px rgba(32, 86, 60, 0.3);
-  }
-  100% {
-      -moz-box-shadow: 0 0 0 0 rgba(32, 86, 60, 0.3);
-      box-shadow: 0 0 0 0 rgba(32, 86, 60, 0.3);
-  }
-}
-
-/* CUSTOM MENU
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-/***** Top menu *****/
-
-.navbar {
-	margin-bottom: 0;
-	background: #212529;
-	border: 0;
-	-moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0;
-	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
-}
-
-ul.navbar-nav {
-	font-family: 'Josefin Sans', sans-serif;
-	font-size: 14px;
-	color: #fff;
-	font-weight: 400;
-	text-transform: uppercase;
-}
-
-.navbar-inverse ul.navbar-nav li a { padding-top: 20px; padding-bottom: 20px; color: #fff; border: 0; }
-.navbar-inverse ul.navbar-nav li a:hover { color: #ddd; border: 0; }
-.navbar-inverse ul.navbar-nav li a:focus { color: #ddd; outline: 0; border: 0; }
-
-.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand { margin-left: 0; }
+    display: inline-block;
+    margin-left: .5rem;
+    font-weight: normal; }
