Added owner to gamerooms list table display

--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -20,6 +20,7 @@
                     <tr>
                         <th class="text-center">Game ID</th>
                         <th class="text-center">Game Room Name</th>
+                        <th class="text-center">Game Room Owner</th>
                         <th class="text-center">Players Connected</th>
                         <th class="text-center">Max Players Allowed</th>
                     </tr>
