--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -46,25 +46,66 @@ ul.openGamesC{
 }
 
 #create{
-  color: #FFF;
-  background-color: #4f9cf2;
-  border-color: #4f9cf2;
-  margin-bottom: 10px;
-}
-#create:hover{
-  background-color: rgb(72, 97, 239);
-  border-color: rgb(72, 97, 239);
+    border: none;
+    margin-bottom: 10px;
+    color: hsla(0,0%,20%,1);
+    text-shadow: hsla(0,0%,40%,.5) 0 -1px 0, hsla(0,0%,100%,.6) 0 2px 1px;
+    background-image: -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%,
+    hsla(0,0%,100%,0) 6%, hsla(0,0%,100%, .1) 7.5%),
+    -webkit-repeating-linear-gradient(left, hsla(0,0%, 0%,0) 0%,
+    hsla(0,0%, 0%,0) 4%, hsla(0,0%, 0%,.03) 4.5%),
+    -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%,
+    hsla(0,0%,100%,.15) 2.2%), linear-gradient(180deg, hsl(0,0%,78%) 0%,
+    hsl(0,0%,90%) 47%, hsl(0,0%,78%) 53%, hsl(0,0%,70%)100%);
+    box-shadow: inset hsla(0,0%,15%, 1) 0 0px 0px 4px,
+    /* border */
+    inset hsla(0,0%,15%, .8) 0 -1px 5px 4px,
+    /* soft SD */
+    inset hsla(0,0%,0%, .25) 0 -1px 0px 7px,
+    /* bottom SD */
+    inset hsla(0,0%,100%,.7) 0 2px 1px 7px,
+    /* top HL */
+    hsla(0,0%, 0%,.15) 0 -5px 6px 4px,
+    /* outer SD */
+    hsla(0,0%,0%,.5) 5px 5px 5px 5px;
 }
 
 #join{
-  color: #FFF;
-  background-color:#3dba75;
-  border-color: #3dba75;
-  margin-bottom: 10px;
+    border: none;
+    margin-bottom: 10px;
+    color: hsla(0,0%,20%,1);
+    text-shadow: hsla(0,0%,40%,.5) 0 -1px 0, hsla(0,0%,100%,.6) 0 2px 1px;
+    background-image: -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%,
+    hsla(0,0%,100%,0) 6%, hsla(0,0%,100%, .1) 7.5%),
+    -webkit-repeating-linear-gradient(left, hsla(0,0%, 0%,0) 0%,
+    hsla(0,0%, 0%,0) 4%, hsla(0,0%, 0%,.03) 4.5%),
+    -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%,
+    hsla(0,0%,100%,.15) 2.2%), linear-gradient(180deg, hsl(0,0%,78%) 0%,
+    hsl(0,0%,90%) 47%, hsl(0,0%,78%) 53%, hsl(0,0%,70%)100%);
+    box-shadow: inset hsla(0,0%,15%, 1) 0 0px 0px 4px,
+    /* border */
+    inset hsla(0,0%,15%, .8) 0 -1px 5px 4px,
+    /* soft SD */
+    inset hsla(0,0%,0%, .25) 0 -1px 0px 7px,
+    /* bottom SD */
+    inset hsla(0,0%,100%,.7) 0 2px 1px 7px,
+    /* top HL */
+    hsla(0,0%, 0%,.15) 0 -5px 6px 4px,
+    /* outer SD */
+    hsla(0,0%,0%,.5) 5px 5px 5px 5px;
 }
-#join:hover{
-  background-color: rgb(48, 160, 106);
-  border-color: rgb(48, 160, 106);
+#join:active{
+      color: hsl(210, 100%, 40%);
+      text-shadow: hsla(210,100%,20%,.3) 0 -1px 0, hsl(210,100%,85%) 0 2px 1px, hsla(200,100%,80%,1) 0 0 5px, hsla(210,100%,50%,.6) 0 0 20px;
+      box-shadow:
+        inset hsla(210,100%,30%,  1) 0  0px 0px 4px, /* border */
+        inset hsla(210,100%,15%, .4) 0 -1px 5px 4px, /* soft SD */
+        inset hsla(210,100%,20%,.25) 0 -1px 0px 7px, /* bottom SD */
+        inset hsla(210,100%,100%,.7) 0  2px 1px 7px, /* top HL */
+
+        hsla(210,100%,75%, .8) 0  0px 3px 2px, /* outer SD */
+        hsla(210,50%,40%, .25) 0 -5px 6px 4px, /* outer SD */
+        hsla(210,80%,95%,   1) 0  5px 6px 4px; /* outer HL */
 }
 
 .cardb h1{
@@ -75,22 +116,47 @@ ul.openGamesC{
 }
 
 .cardb {
+    padding-top: 30px;
     text-align: center;
-    box-shadow: 0 2em 4em 0 #37ad6c;
+    /*box-shadow: 0 2em 4em 0 #37ad6c;
+    background: rgba(57, 150, 99, 0.85);*/
     transition: 0.5s;
-    background: rgba(57, 150, 99, 0.85);
     padding: 0.6em;
+    box-shadow: 0 0 1px 0 black,
+    1px 2px 4px 0 rgba(255, 255, 255, 0.1) inset,
+    3px 5px 6px -2px rgba(255, 255, 255, 0.05) inset,
+    1px 3px 0 1px rgba(0, 0, 0, 0.3),
+    3px 6px 2px -2px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(50deg, rgba(8, 7, 9, 0.25) 0,
+    rgba(21, 15, 26, 0.25) 10%, rgba(49, 37, 55, 0.25) 25%, rgba(8, 6, 10, 0.25) 40%,
+    rgba(47, 39, 53, 0.25) 60%, rgba(8, 6, 10, 0.25) 70%, rgba(21, 14, 27, 0.25) 90%,
+    rgba(8, 5, 11, 0.25) 100%), linear-gradient(120deg, rgba(5, 5, 5, 0.5) 0,
+    rgba(13, 22, 16, 0.5) 0%, rgba(73, 90, 83, 0.5) 30%, rgba(50, 62, 57, 0.5) 50%,
+    rgba(78, 86, 81, 0.5) 70%, rgba(37, 50, 41, 0.5) 100%),
+    linear-gradient(75deg, #1d1c1b 0, #030302 35%, #000000 65%, #000000 100%);
+    height: 100%;
 }
 
 .cardr h1{
     color: white;
 }
 .cardr {
+    padding-top: 30px;
     text-align: center;
-    box-shadow: 0 2em 4em 0 #2d5a91;
     transition: 0.5s;
-    background: rgba(43, 58, 173, 0.85);
     padding: 0.6em;
+    box-shadow: 0 0 1px 0 black,
+    1px 2px 4px 0 rgba(255, 255, 255, 0.1) inset,
+    3px 5px 6px -2px rgba(255, 255, 255, 0.05) inset,
+    1px 3px 0 1px rgba(0, 0, 0, 0.3),
+    3px 6px 2px -2px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(50deg, rgba(8, 7, 9, 0.25) 0,
+    rgba(21, 15, 26, 0.25) 10%, rgba(49, 37, 55, 0.25) 25%, rgba(8, 6, 10, 0.25) 40%,
+    rgba(47, 39, 53, 0.25) 60%, rgba(8, 6, 10, 0.25) 70%, rgba(21, 14, 27, 0.25) 90%,
+    rgba(8, 5, 11, 0.25) 100%), linear-gradient(120deg, rgba(5, 5, 5, 0.5) 0,
+    rgba(13, 22, 16, 0.5) 0%, rgba(73, 90, 83, 0.5) 30%, rgba(50, 62, 57, 0.5) 50%,
+    rgba(78, 86, 81, 0.5) 70%, rgba(37, 50, 41, 0.5) 100%),
+    linear-gradient(75deg, #1d1c1b 0, #030302 35%, #000000 65%, #000000 100%);
 }
 
 table {
@@ -146,7 +212,6 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
     height: 38px;
-    color: #555;
     text-align: center;
     font-size: 14px;
     font-weight: 300;
@@ -156,7 +221,32 @@ input[type="button"] {
     border-radius: 1px;
     border: 1px solid #bbb;
     cursor: pointer;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 10px;
+    color: hsla(0,0%,20%,1);
+    text-shadow: hsla(0,0%,40%,.5) 0 -1px 0, hsla(0,0%,100%,.6) 0 2px 1px;
+    background-image: -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%,
+    hsla(0,0%,100%,0) 6%, hsla(0,0%,100%, .1) 7.5%),
+    -webkit-repeating-linear-gradient(left, hsla(0,0%, 0%,0) 0%,
+    hsla(0,0%, 0%,0) 4%, hsla(0,0%, 0%,.03) 4.5%),
+    -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%,
+    hsla(0,0%,100%,.15) 2.2%), linear-gradient(180deg, hsl(0,0%,78%) 0%,
+    hsl(0,0%,90%) 47%, hsl(0,0%,78%) 53%, hsl(0,0%,70%)100%);
+    box-shadow: inset hsla(0,0%,15%, 1) 0 0px 0px 4px,
+    /* border */
+    inset hsla(0,0%,15%, .8) 0 -1px 5px 4px,
+    /* soft SD */
+    inset hsla(0,0%,0%, .25) 0 -1px 0px 7px,
+    /* bottom SD */
+    inset hsla(0,0%,100%,.7) 0 2px 1px 7px,
+    /* top HL */
+    hsla(0,0%, 0%,.15) 0 -5px 6px 4px,
+    /* outer SD */
+    hsla(0,0%,0%,.5) 5px 5px 5px 5px;
+
+
+}
 
 
 /* Forms
