--- a/clashofplanets/game/templates/login.html
+++ b/clashofplanets/game/templates/login.html
@@ -1,37 +1,33 @@
 {% extends "base.html" %}
 {% block main_content %}
     <div class="row">
-        <div class="col-lg-12 col-md-12 text-center">
+        <div class="col-lg-12 col-md-12 text-center cardb">
             <h3>Login</h3>
             <hr>
             {% if form.errors %}
             <p class="text-danger">Your username and password didn't match. Please try again.</p>
             {% endif %}
-            <form action="#" method="POST">
+            <form method="post">
                 {% csrf_token %}
-                <fieldset>
-                    {% for field in form %}
-                        {% if field.errors %}
-                            <div class="control-group error">
-                                <label class="control-label">{{ field.label }}</label>
-                                <div class="controls">{{ field }}
-                        <span class="help-inline text-danger">
-                            {% for error in  field.errors %}{{ error }}{% endfor %}
-                        </span>
-                                </div>
+                {% for field in form %}
+                    {% if field.errors %}
+                        <div class="control-group error">
+                            <label class="control-label">{{ field.label }}</label>
+                            <div class="controls">{{ field }}
+                    <span class="help-inline text-danger">
+                        {% for error in  field.errors %}{{ error }}{% endfor %}
+                    </span>
                             </div>
-                        {% else %}
-                            <div class="control-group">
-                                <label class="control-label">{{ field.label }}</label>
-                                <div class="controls">{{ field }}</div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                </fieldset>
+                        </div>
+                    {% else %}
+                        <div class="control-group">
+                            <label class="control-label">{{ field.label }}</label>
+                            <div class="controls">{{ field }}</div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
                 <hr>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+                <input class="button-primary btn btn-space" type="submit" value="log in">
             </form>
 
         </div>
