--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row text-center">
         <div class="col">
-            <h1>Game Room: {{game.room_name}}
+            <h1>Game Room of {{game.room_name}}
             <p id="gamenum">{{game}}</p>
             {% if request.user.is_authenticated %}
                 <span class="text-primary" >{{request.user.username}}</span>!
