--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -25,8 +25,8 @@
         {% endblock %}
 
     </head>
-    <body>
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
+    <body id="bg" style="background-image: url('{% static "img/bg-image.jpg"%}')";>
+        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top metal-effect">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsCollapse" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,7 +48,7 @@
             {% block main_content %}
             {% endblock %}
         </div>
-        <footer class="footer fixed-bottom">
+        <footer class="footer fixed-bottom metal-effect">
             <div class="container">
                 <span>Synergia 2017. Todos los derechos reservados.</span>
             </div>
