--- a/clashofplanets/game/templates/game_instructions.html
+++ b/clashofplanets/game/templates/game_instructions.html
@@ -8,16 +8,13 @@
     <div class="col-lg-12 col-md-12 text-center">
         <h1>Game Instructions</h1>
         <hr>
-        <div id="Content">
-            <div class="boxed">
-                <div id="lipsum">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc magna erat, malesuada vitae convallis ut, egestas et diam. Nullam egestas elit semper, vestibulum ex a, eleifend turpis. Curabitur feugiat lacus sed justo suscipit, in auctor tortor scelerisque. Nullam vulputate purus sit amet nulla varius molestie. Phasellus eleifend efficitur justo eget cursus. Aliquam vestibulum nulla in commodo sagittis. Duis blandit vestibulum pretium. Sed vitae ante vel nibh congue semper at non nibh. Nullam lorem est, maximus id malesuada nec, volutpat ut erat. Aenean a nunc sit amet lacus rhoncus pellentesque ut id risus. Ut bibendum volutpat massa a pulvinar. Integer eget nunc arcu.
-                    </p>
-                    <p>
-                        Donec vitae ligula quam. In at magna non urna dictum porta. Sed elementum augue ac augue pellentesque, a eleifend turpis rutrum. Proin eu sem eget eros tincidunt mollis eu in dui. Pellentesque volutpat lacinia suscipit. Nunc at accumsan lacus. Nam vestibulum ornare diam et pellentesque. Nunc eu ornare lacus, eu dictum nisl. Duis mollis ultricies libero, ut interdum massa ullamcorper a. Vestibulum molestie nulla et quam lacinia, vel feugiat tortor mollis. Nunc diam lacus, lacinia eu condimentum ut, consectetur a sapien. Quisque eu mollis justo, a maximus mi. Mauris gravida ac tellus quis dictum. Phasellus aliquam justo in mi aliquet finibus. Integer vitae velit sed ante dapibus luctus.
-                    </p>
-                </div>
+        <div class="row metal-effect2">
+            <div class="col-lg-12 top15">
+                <p>
+                    Clasf Of The Planets is a real time space combat game. Each player owns a planet that has a control sheet to make all bookkeeping (population, shield and missiles) easier.
+                    The game is normally played in two modes, each player can choose their own distribution to generate the three kind of resources, choose an enemy planet and attack them.
+                    The last player with the planet alive is the one who win the game.
+                </p>
             </div>
         </div>
     </div>
